[package]
name = "crates-io"
version = "0.40.18"
rust-version = "1.93"  # MSRV:1
edition.workspace = true
license.workspace = true
repository.workspace = true
description = """
Helpers for interacting with crates.io
"""

[lib]
name = "crates_io"
path = "lib.rs"

[dependencies]
percent-encoding.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
thiserror.workspace = true
url.workspace = true

[target.'cfg(not(all(target_arch = "wasm32", target_os = "wasi")))'.dependencies]
curl.workspace = true

[lints]
workspace = true
