[package]
name = "home"
version = "0.5.9"
authors = ["Brian Anderson <andersrb@gmail.com>"]
rust-version = "1.70.0"  # MSRV:3
documentation = "https://docs.rs/home"
edition.workspace = true
include = [
    "/src",
    "/Cargo.toml",
    "/CHANGELOG",
    "/LICENSE-*",
    "/README.md",
]
license.workspace = true
repository = "https://github.com/rust-lang/cargo"
description = "Shared definitions of home directories."

[target.'cfg(windows)'.dependencies]
windows-sys = { workspace = true, features = ["Win32_Foundation", "Win32_UI_Shell", "Win32_System_Com"] }

[lints]
workspace = true
