[package]
name = "home"
version = "0.5.12"
authors = ["Brian Anderson <andersrb@gmail.com>"]
rust-version.workspace = true
documentation = "https://docs.rs/home"
edition.workspace = true
include = [
    "/src",
    "/Cargo.toml",
    "/CHANGELOG",
    "/LICENSE-*",
    "/README.md",
]
license.workspace = true
homepage.workspace = true
repository.workspace = true
description = "Shared definitions of home directories."

[target.'cfg(windows)'.dependencies]
windows-sys = { workspace = true, features = ["Win32_Foundation", "Win32_UI_Shell", "Win32_System_Com"] }

[lints]
workspace = true
