[package]
name = "mdman"
edition.workspace = true
license.workspace = true
description = "Creates a man page page from markdown."

[dependencies]
anyhow.workspace = true
handlebars.workspace = true
pulldown-cmark.workspace = true
same-file.workspace = true
serde_json.workspace = true
url.workspace = true

[dev-dependencies]
snapbox.workspace = true

[lints]
workspace = true
