[package]
name = "mdman"
version = "0.0.0"
edition.workspace = true
license.workspace = true
description = "Creates a man page from markdown."
publish = false

[dependencies]
anyhow.workspace = true
handlebars.workspace = true
pulldown-cmark.workspace = true
same-file.workspace = true
serde_json.workspace = true
url.workspace = true

[dev-dependencies]
snapbox.workspace = true

[lints]
workspace = true
