[package]
name = "resolver-tests"
version = "0.0.0"
edition.workspace = true
publish = false

[dependencies]
cargo.workspace = true
cargo-platform.workspace = true
cargo-util-schemas.workspace = true
cargo-util.workspace = true
proptest.workspace = true
varisat.workspace = true

[lints]
workspace = true
