[package]
name = "rustfix"
version = "0.7.0"
authors = [
    "Pascal Hertleif <killercup@gmail.com>",
    "Oliver Schneider <oli-obk@users.noreply.github.com>",
]
rust-version = "1.70.0"  # MSRV:3
edition.workspace = true
license.workspace = true
homepage = "https://github.com/rust-lang/cargo"
repository = "https://github.com/rust-lang/cargo"
description = "Automatically apply the suggestions made by rustc"
documentation = "https://docs.rs/rustfix"
exclude = [
    "examples/*",
    "tests/*",
]

[dependencies]
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true

[dev-dependencies]
anyhow.workspace = true
proptest.workspace = true
similar = "2.3.0"
tempfile.workspace = true
tracing-subscriber.workspace = true

[lints]
workspace = true
