[package]
name = "rustfix"
version = "0.9.4"
authors = [
    "Pascal Hertleif <killercup@gmail.com>",
    "Oliver Schneider <oli-obk@users.noreply.github.com>",
]
rust-version.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
description = "Automatically apply the suggestions made by rustc"
documentation = "https://docs.rs/rustfix"
exclude = [
    "examples/*",
    "tests/*",
]

[dependencies]
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true

[dev-dependencies]
anyhow.workspace = true
proptest.workspace = true
similar.workspace = true
tempfile.workspace = true
tracing-subscriber.workspace = true
snapbox.workspace = true

[lints]
workspace = true
