[package]
name = "xtask-bump-check"
version = "0.0.0"
edition.workspace = true
publish = false

[dependencies]
anyhow.workspace = true
cargo.workspace = true
cargo-util.workspace = true
clap.workspace = true
git2.workspace = true
semver.workspace = true
tracing-subscriber.workspace = true
tracing.workspace = true

[lints]
workspace = true
