[package]
name = "xtask-bump-check"
edition.workspace = true

[dependencies]
anyhow.workspace = true
cargo.workspace = true
cargo-util.workspace = true
clap.workspace = true
git2.workspace = true
semver.workspace = true
tracing-subscriber.workspace = true
tracing.workspace = true

[lints]
workspace = true
