[package]
name = "xtask-changes"
version = "0.0.0"
edition = "2021"
publish = false

[dependencies]
anyhow.workspace = true
cargo.workspace = true
clap.workspace = true
env_logger.workspace = true
git-conventional.workspace = true
git2.workspace = true
log.workspace = true
semver.workspace = true
termcolor.workspace = true
