[package]
name = "cargo-credential-1password"
version = "0.4.5"
rust-version.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
description = "A Cargo credential process that stores tokens in a 1password vault."

[dependencies]
cargo-credential.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true

[lints]
workspace = true
