[package]
name = "cargo-credential-gnome-secret"
version = "0.2.0"
edition.workspace = true
license.workspace = true
repository = "https://github.com/rust-lang/cargo"
description = "A Cargo credential process that stores tokens with GNOME libsecret."

[dependencies]
cargo-credential.workspace = true

[build-dependencies]
pkg-config.workspace = true
