[package]
name = "cargo-credential-libsecret"
version = "0.5.4"
rust-version = "1.91"  # MSRV:1
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
description = "A Cargo credential process that stores tokens with GNOME libsecret."

[dependencies]
anyhow.workspace = true
cargo-credential.workspace = true
libloading.workspace = true

[lints]
workspace = true
