[package]
name = "cargo-credential-macos-keychain"
version = "0.2.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/rust-lang/cargo"
description = "A Cargo credential process that stores tokens in a macOS keychain."

[dependencies]
cargo-credential.workspace = true

[target.'cfg(target_os = "macos")'.dependencies]
security-framework.workspace = true
