[package]
name = "cargo-credential-macos-keychain"
version = "0.3.2"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository = "https://github.com/rust-lang/cargo"
description = "A Cargo credential process that stores tokens in a macOS keychain."

[dependencies]
cargo-credential.workspace = true

[target.'cfg(target_os = "macos")'.dependencies]
security-framework.workspace = true
