[package]
name = "cargo-credential-macos-keychain"
version = "0.4.19"
rust-version = "1.91"  # MSRV:1
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
description = "A Cargo credential process that stores tokens in a macOS keychain."

[dependencies]
cargo-credential.workspace = true

[target.'cfg(target_os = "macos")'.dependencies]
security-framework.workspace = true

[lints]
workspace = true
