[package]
name = "cargo-credential-trusted-publish"
version = "0.1.0"
rust-version.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
description = "A Cargo credential provider that uses OIDC tokens for trusted publishing to crates.io."

[[bin]]
name = "cargo-credential-trusted-publish"
path = "src/main.rs"

[lib]
name = "cargo_credential_trusted_publish"
path = "src/lib.rs"

[dependencies]
cargo-credential.workspace = true
anyhow.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
tokio = { version = "1.0", features = ["rt-multi-thread", "macros"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }

[lints]
workspace = true 