[package]
name = "cargo-credential-wincred"
version = "0.3.2"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository = "https://github.com/rust-lang/cargo"
description = "A Cargo credential process that stores tokens with Windows Credential Manager."

[dependencies]
cargo-credential.workspace = true

[target.'cfg(windows)'.dependencies.windows-sys]
features = ["Win32_Foundation", "Win32_Security_Credentials"]
workspace = true
