[package]
name = "cargo-credential-wincred"
version = "0.4.19"
rust-version = "1.91"  # MSRV:1
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
description = "A Cargo credential process that stores tokens with Windows Credential Manager."

[dependencies]
cargo-credential.workspace = true

[target.'cfg(windows)'.dependencies.windows-sys]
features = ["Win32_Foundation", "Win32_Security_Credentials"]
workspace = true

[lints]
workspace = true
