[package]
name = "crates-io"
version = "0.7.0"
authors = ["Alex Crichton <alex@alexcrichton.com>"]
license = "MIT/Apache-2.0"
repository = "https://github.com/rust-lang/cargo"
description = """
Helpers for interacting with crates.io
"""

[lib]
name = "crates_io"
path = "lib.rs"

[dependencies]
curl = "0.4"
serde = "0.9"
serde_derive = "0.9"
serde_json = "0.9"
url = "1.0"
