[package]
name = "crates-io"
version = "0.14.0"
authors = ["Alex Crichton <alex@alexcrichton.com>"]
license = "MIT/Apache-2.0"
repository = "https://github.com/rust-lang/cargo"
description = """
Helpers for interacting with crates.io
"""

[lib]
name = "crates_io"
path = "lib.rs"

[dependencies]
curl = "0.4"
failure = "0.1.1"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
url = "1.0"
