[package]
name = "cargo-metadata"
version = "0.1.0"
authors = ["Alex Crichton <alex@alexcrichton.com>",
           "Ahmed Charles <acharles@outlook.com>"]
license = "MIT/Apache-2.0"
repository = "https://github.com/rust-lang/cargo"
description = """
Helpers for interacting with 'cargo metadata'.
"""

[lib]
name = "cargo_metadata"
path = "lib.rs"

[dependencies]
regex = "0.1"
rustc-serialize = "0.3"
