[package]
name = "cargotest"
version = "0.1.0"
authors = ["Alex Crichton <alex@alexcrichton.com>"]

[lib]
path = "lib.rs"

[dependencies]
bufstream = "0.1"
cargo = { path = "../.." }
filetime = "0.1"
flate2 = "0.2"
git2 = "0.4"
hamcrest = "0.1"
kernel32-sys = "0.2"
libc = "0.2"
log = "0.3"
rustc-serialize = "0.3"
tar = "0.4"
tempdir = "0.3"
term = "0.4.4"
url = "1.1"
winapi = "0.2"
