[package]
name = "cargotest"
version = "0.1.0"
authors = ["Alex Crichton <alex@alexcrichton.com>"]

[lib]
path = "lib.rs"

[dependencies]
cargo = { path = "../.." }
filetime = "0.1"
flate2 = "0.2"
git2 = { version = "0.6", default-features = false }
hamcrest = "=0.1.1"
hex = "0.2"
log = "0.3"
serde_json = "1.0"
tar = { version = "0.4", default-features = false }
url = "1.1"
